agregamos un parrafo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>hola desde hthhjjml</h1>
     <p>hola mundoi</p>
+    <p>Sugerencia: Usa palabras que puedan aparecer en
+     la página que buscas. Por ejemplo, "recetas de galletas",
+     en lugar de "cómo hacer una galleta".
+
+    </p>
 </body>
 </html>
